--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "lv-hackathon-webapp",
   "version": "0.0.1",
+  "artifact-name":"hackathon",
   
   "dependencies": {
     "express": "~3.2.4",
@@ -21,6 +22,7 @@
     "grunt-contrib-coffee": "~0.6.6",
     "grunt-contrib-handlebars": "~0.5.8",
     "grunt-contrib-uglify": "~0.2.0",
+    "grunt-contrib-compress": "*",
     "grunt-contrib-compass": "~0.2.0",
     "grunt-contrib-jshint": "~0.4.3",
     "grunt-contrib-cssmin": "~0.6.0",
@@ -40,7 +42,9 @@
     "jshint-stylish": "~0.1.3",
     "grunt-exec": "~0.4.2",
     "grunt-contrib-watch": "~0.4.4",
-    "time-grunt": "~0.1.1"
+    "time-grunt": "~0.1.1",
+    "grunt-tomcat-deploy": "git://github.com/clurect/grunt-tomcat-deploy.git#master",
+    "grunt-zip": "~0.10.0"
   },
   "engines": {
     "node": ">=0.8.0"
